<resources>
    <string name="ablum_not_supported">Album recall is not supported</string>
    <string name="age">Age</string>
    <string name="anger">Angry</string>
    <string name="animoji_bagequan">Bulldog</string>
    <string name="animoji_boy">Boy</string>
    <string name="animoji_caihongzhu">Rainbow Piggy</string>
    <string name="animoji_duoshanbingqilin">Ice Cream Boy</string>
    <string name="animoji_fensebianbian">Pink Poop</string>
    <string name="animoji_gewanggugu">Pigeon King GooGoo</string>
    <string name="animoji_girl">Girl</string>
    <string name="animoji_keaizhu">Cute Piggy</string>
    <string name="animoji_maoernvhai">Cat Girl</string>
    <string name="app_name">BytePlus Effects</string>
    <string name="applaud">Handclap</string>
    <string name="avatar">Avatar</string>
    <string name="back_light">In a poor light.</string>
    <string name="beauty">Default Beauty Effects</string>
    <string name="beauty_body_arm_slim">Arm</string>
    <string name="beauty_body_breast_enlarge">Breast</string>
    <string name="beauty_body_hip_enhance">Hip</string>
    <string name="beauty_body_leg_slim">Leg Size</string>
    <string name="beauty_body_long_leg">Leg Length</string>
    <string name="beauty_body_neck_enhance">Neck</string>
    <string name="beauty_body_shrink_head">Head</string>
    <string name="beauty_body_thin">Body</string>
    <string name="beauty_body_waist_slim">Waist</string>
    <string name="beauty_face_brighten_eye">Eye Shine</string>
    <string name="beauty_face_eye_plump">Aegyo-sal</string>
    <string name="beauty_face_eye_single_to_double_eyelid">Eyelids</string>
    <string name="beauty_face_remove_pouch">Darkcircle</string>
    <string name="beauty_face_sharpen">Sharpen</string>
    <string name="beauty_face_smile_folds">Laugh Line</string>
    <string name="beauty_face_smooth">Buffing</string>
    <string name="beauty_face_whiten">Toning</string>
    <string name="beauty_face_whiten_teeth">Teeth Whitening</string>
    <string name="beauty_face_whiten_teeth_desc">Teeth Whitening</string>
    <string name="beauty_reshape_brow_distance">Distance</string>
    <string name="beauty_reshape_brow_group">Eyebrow</string>
    <string name="beauty_reshape_brow_position">Position</string>
    <string name="beauty_reshape_brow_ridge">Ridge</string>
    <string name="beauty_reshape_brow_size">Thickness</string>
    <string name="beauty_reshape_brow_tilt">Incline</string>
    <string name="beauty_reshape_brow_width">Length</string>
    <string name="beauty_reshape_dark_circle">Darkcircle</string>
    <string name="beauty_reshape_eye">Size</string>
    <string name="beauty_reshape_eye_group">Eye</string>
    <string name="beauty_reshape_eye_height">Height</string>
    <string name="beauty_reshape_eye_inner_corner">Inner Corner</string>
    <string name="beauty_reshape_eye_lower_eyelid">Downturn</string>
    <string name="beauty_reshape_eye_move">Position</string>
    <string name="beauty_reshape_eye_outer_corner">Outer Corner</string>
    <string name="beauty_reshape_eye_pupil">Pupil Size</string>
    <string name="beauty_reshape_eye_rotate">Upturn</string>
    <string name="beauty_reshape_eye_size">Size</string>
    <string name="beauty_reshape_eye_spacing">Distance</string>
    <string name="beauty_reshape_eye_width">Width</string>
    <string name="beauty_reshape_face_cheek">Cheek</string>
    <string name="beauty_reshape_face_chin">Chin Length</string>
    <string name="beauty_reshape_face_cut">Upper Width</string>
    <string name="beauty_reshape_face_group">Face</string>
    <string name="beauty_reshape_face_hair">Hairline</string>
    <string name="beauty_reshape_face_jaw">Jaw</string>
    <string name="beauty_reshape_face_overall">Lower Width</string>
    <string name="beauty_reshape_face_small">Size</string>
    <string name="beauty_reshape_face_v">V Shape</string>
    <string name="beauty_reshape_forehead">Hairline</string>
    <string name="beauty_reshape_mouth_group">Mouth</string>
    <string name="beauty_reshape_mouth_move">Position</string>
    <string name="beauty_reshape_mouth_smile">Smile</string>
    <string name="beauty_reshape_mouth_width">Width</string>
    <string name="beauty_reshape_mouth_zoom">Size</string>
    <string name="beauty_reshape_nose_bridge">Bridge</string>
    <string name="beauty_reshape_nose_group">Nose</string>
    <string name="beauty_reshape_nose_move">Lift</string>
    <string name="beauty_reshape_nose_root">Root</string>
    <string name="beauty_reshape_nose_size">Size</string>
    <string name="beauty_reshape_nose_swing">Wing</string>
    <string name="beauty_reshape_nose_tip">Tip</string>
    <string name="beauty_score">Beauty Score</string>
    <string name="black">Black</string>
    <string name="blusher_color_fentao">Peach Pink</string>
    <string name="blusher_color_qianfen">Light Pink</string>
    <string name="blusher_color_qianzi">Light Purple</string>
    <string name="blusher_color_shanhu">Coral</string>
    <string name="blusher_color_xingren">Almond</string>
    <string name="blusher_mitao">Peachy</string>
    <string name="blusher_qiaopi">Joyful</string>
    <string name="blusher_qise">Tinct</string>
    <string name="blusher_richang">Daily</string>
    <string name="blusher_rixi">Japanese</string>
    <string name="blusher_shaishang">Sunburn</string>
    <string name="blusher_shaishanghong">Sunburn Red</string>
    <string name="blusher_suzui">Hangover</string>
    <string name="blusher_tiancheng">Sweet Orange</string>
    <string name="blusher_weixun">Tipsy</string>
    <string name="blusher_weixunfen">Tipsy</string>
    <string name="blusher_xinji">Calculating</string>
    <string name="blusher_yuanqi">Vivid</string>
    <string name="brand_rec">License Plate Detection</string>
    <string name="brown">Indian</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="c1_desc">Classification algorithm</string>
    <string name="c2_desc">Classification Algorithm</string>
    <string name="camera">Camera</string>
    <string name="cancel">No</string>
    <string name="capture_fail">Save failed</string>
    <string name="capture_ing">saving</string>
    <string name="capture_ok">Image is saved to the album</string>
    <string name="car_blur">Blurry or Not</string>
    <string name="car_blur_not">Blurry</string>
    <string name="car_blur_ok">Normal</string>
    <string name="car_detect">Vehicle Detection</string>
    <string name="car_direction_youce">Right</string>
    <string name="car_direction_youcehou">Right behind</string>
    <string name="car_direction_youceqian">Right front</string>
    <string name="car_direction_zhengqian">Front</string>
    <string name="car_direction_zhengzhou">Behind</string>
    <string name="car_direction_zuoce">Left</string>
    <string name="car_direction_zuocehou">Left behind</string>
    <string name="car_direction_zuoceqian">Left front</string>
    <string name="car_gray_not">Too dark</string>
    <string name="car_gray_ok">Normal</string>
    <string name="car_light">Bright or not</string>
    <string name="cat">Cat</string>
    <string name="choose">Select one face image</string>
    <string name="close">Turn off</string>
    <string name="closing_eye">Blink</string>
    <string name="cloudy">Cloudy</string>
    <string name="confirm">Yes</string>
    <string name="confuse">Confuse</string>
    <string name="cost">Time elapsed</string>
    <string name="cost_default">Time elapsed: 0ms</string>
    <string name="count_suffix">Count</string>
    <string name="current_face">Current number of faces</string>
    <string name="deep_squat">Squat</string>
    <string name="demo_use_only">For effect demonstration only, welcome to discuss with us</string>
    <string name="detect">Detection</string>
    <string name="detect_count">Total number of detections</string>
    <string name="dist">Distance (m):</string>
    <string name="dog">Dog</string>
    <string name="download_cancelled">Download cancelled</string>
    <string name="download_fail">Download failed</string>
    <string name="download_sticker">Download Stickers</string>
    <string name="download_success">Download succeed</string>
    <string name="dynamic_action">AI Fitness</string>
    <string name="dynamic_action_tip">Move further away from the screen, \n until full body is within the profile.</string>
    <string name="effect">Effects</string>
    <string name="effecttype">Switch material</string>
    <string name="exit">Exit</string>
    <string name="expression">Expression</string>
    <string name="eye_bingtang">Hawthorn</string>
    <string name="eye_dadizong">Ground Brown</string>
    <string name="eye_hanxi">Korean</string>
    <string name="eye_jiaotangzong">Caramel Brown</string>
    <string name="eye_meizihong">Plum Red</string>
    <string name="eye_naichase">Milktea Brown</string>
    <string name="eye_nvshen">Beauty</string>
    <string name="eye_qizhifen">Gorgeous Pink</string>
    <string name="eye_shaonvfen">Girlish Pink</string>
    <string name="eye_wanxiahong">Sunset Red</string>
    <string name="eye_xingzi">Apricot</string>
    <string name="eye_yanxunzong">Smoky Brown</string>
    <string name="eye_yuanqiju">Vivid Orange</string>
    <string name="eye_ziranlan">Natural Blue</string>
    <string name="eyebrow_biaozhun">Standard</string>
    <string name="eyebrow_chunhei">Pure Dark</string>
    <string name="eyebrow_cuhei">Heavy &amp;Black</string>
    <string name="eyebrow_danhui">Light Grey</string>
    <string name="eyebrow_heise">Black</string>
    <string name="eyebrow_liuye">Lanceted</string>
    <string name="eyebrow_rongrong">Furry</string>
    <string name="eyebrow_xihei">Thin &amp;Black</string>
    <string name="eyebrow_yesheng">Wild</string>
    <string name="eyebrow_ziranhei">Natural Dark</string>
    <string name="eyebrow_zongse">Brown</string>
    <string name="eyelash_chibang">Wingy</string>
    <string name="eyelash_juanqiao">Curling</string>
    <string name="eyelash_manhua">Manga</string>
    <string name="eyelash_nongmi">Dense</string>
    <string name="eyelash_shanxing">Fanshape</string>
    <string name="eyelash_wumei">Charming</string>
    <string name="eyelash_xiachui">Drooping</string>
    <string name="eyelash_ziran">Natural</string>
    <string name="face_106_desc">106 Keypoints &amp; Body Motion</string>
    <string name="face_106_title">106 Face</string>
    <string name="face_280_desc">Pupil &amp; Lip</string>
    <string name="face_280_title">280 Face</string>
    <string name="face_attr_desc">Properties Expression</string>
    <string name="face_attr_title">Property</string>
    <string name="face_cluster_class_name">Character</string>
    <string name="face_cluster_clean">Turn off</string>
    <string name="face_cluster_null_class_name">People not recognized</string>
    <string name="face_cluster_start">Start clustering</string>
    <string name="face_cluster_upload">Upload Image</string>
    <string name="face_count">Current face number</string>
    <string name="face_mask_desc">Face Segmentation</string>
    <string name="gender">Gender</string>
    <string name="happiness">Happiness</string>
    <string name="live">Live streaming</string>
    <string name="nod">Nodding</string>
    <string name="open_mouth">Mouth Open</string>
    <string name="performance">Performance</string>
    <string name="pitch">Pitch</string>
    <string name="pout">Pout</string>
    <string name="raise_eyebrow">Eyebrow Raise</string>
    <string name="resolution">Resolution</string>
    <string name="resolution1">1280*720</string>
    <string name="resolution2">640*480</string>
    <string name="roll">Roll</string>
    <string name="shake_head">Head Shaking</string>
    <string name="tab_matting">Virtual Background</string>
    <string name="total_verify">Total number of detections</string>
    <string name="upload_title">Upload photo</string>
    <string name="yaw">Yaw</string>
</resources>