<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_fill_3"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/rl_effect_type"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="48dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:paddingLeft="16dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="18dp"
            android:textColor="@color/colorWhite"
            android:text="@string/effecttype"/>

        <RadioGroup
            android:id="@+id/rg_effect"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="18dp"
            android:gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_live"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:text="@string/live"
                android:checked="true"
                android:textSize="12dp"
                style="@style/radiobutton"/>
            <RadioButton
                android:id="@+id/rb_camera"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginLeft="6dp"
                android:text="@string/camera"
                android:textSize="12dp"
                style="@style/radiobutton"/>
        </RadioGroup>

    </RelativeLayout>


    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rl_beauty"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_trans_15"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:paddingLeft="16dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="18dp"
            android:textColor="@color/colorWhite"
            android:text="@string/beauty"/>

        <com.example.byteplus_effects_plugin.common.view.SwitchView
            android:id="@+id/sw_beauty"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="18dp"
            android:layout_centerVertical="true"
            app:primaryColor="@color/brand_color"
            android:layout_width="40dp"
            android:layout_height="22dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rl_resolution"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_trans_15"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:paddingLeft="16dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="18dp"
            android:textColor="@color/colorWhite"
            android:text="@string/resolution"/>

        <RadioGroup
            android:id="@+id/rg_resolution"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="18dp"
            android:gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_720"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:text="@string/resolution1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:checked="true"
                style="@style/radiobutton"/>
            <RadioButton
                android:id="@+id/rb_480"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_marginLeft="6dp"
                android:text="@string/resolution2"
                style="@style/radiobutton"/>
        </RadioGroup>

    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rl_performance"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_trans_15"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:paddingLeft="16dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="18dp"
            android:textColor="@color/colorWhite"
            android:text="@string/performance"/>

        <com.example.byteplus_effects_plugin.common.view.SwitchView
            android:id="@+id/sw_performance"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="18dp"
            app:primaryColor="@color/brand_color"
            android:layout_width="40dp"
            android:layout_centerVertical="true"
            android:layout_height="22dp"/>

    </RelativeLayout>

</LinearLayout>